--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -6,80 +6,65 @@
     </head>
     <body>
         <header>
-            <section>
-                <div>
-                    <img src="#"/>
-                    <h1>Orinoco</h1>
-                </div>
-                <div id="champ_de_recherche"></div>
-                <div id="menu_icones">
-                    <a>
-                        <i class="fas fa-user"></i>
-                        <p>Mon compte</p>
-                    </a>
-                    <a>
-                        <i class="fas fa-heart"></i>
-                        <p>Favoris</p>
-                    </a>
-                    <a>
-                        <i class="fas fa-shopping-cart"></i>
-                        <p>Mon panier</p>
-                    </a>
-                </div>
-            </section>
+            <img src="#" id="logo"/>
             <nav>
+                <i class="far fa-bars"></i>
                 <ul>
-                    <li>Ours en peluche</li>
-                    <li>Appareils photos vintages</li>
+                    <li><a href="#">Ours en peluche</a></li>
+                    <li><a href="#"></a>Appareils photos vintages</a></li>
                     <li><a href="#">Meubles en chêne</a></li>
                 </ul>
             </nav>
-            <i class="far fa-bars"></i>
         </header>
         <main></main>
             <div>
                 <!--DYNAMIQUE-->
             </div>
-        <footer>
-            <ul>
-                <li>A propos</li>
-                <li><a href="#">Qui sommes nous?</a></li>
-                <li><a href="#">Nos engagements</a></li>
-                <li><a href="#">Carte cadeau</a></li>
-                <li><a href="#">Catalogue</a></li>
-            </ul>
-            <ul>
-                <li>Orinoco&vous</li>
-                <li><a href="#">Livraisons et retours</a></li>
-                <li><a href="#">Services et garanties</a></li>
-                <li><a href="#">Nous contacter</a></li>
-                <li><a href="#">CGV</a></li>
-            </ul>
-            <div>
-                <img src="#" alt="">
-                <h2>Orinoco</h2>
-            </div>
-            <div class="social">
-                <div>
-                    <a href="#">
-                        <i class="fab fa-facebook-f"></i>
-                        <p>Facebook</p>
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <i class="fab fa-twitter"></i>
-                        <p>Twitter</p>
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <i class="fab fa-instagram"></i>
-                        <p>Instagram</p>
-                    </a>
-                </div>
-            </div>
-        </footer>
+            <section class="menu_icons">
+                <a>
+                    <i class="fas fa-user" aria-hidden="true"></i>
+                    <p>Mon compte</p>
+                </a>
+                <a>
+                    <i class="fas fa-heart" aria-hidden="true"></i>
+                    <p>Favoris</p>
+                </a>
+                <a>
+                    <i class="fas fa-shopping-cart" aria-hidden="true"></i>
+                    <p>Mon panier</p>
+                </a>
+            </section>
+            <footer>
+                <p>À propos<i class="fal fa-chevron-down" aria-hidden="true"></i></p>
+                <ul>
+                    <li><a href="#">Qui sommes nous?</a></li>
+                    <li><a href="#">Nos engagements</a></li>
+                    <li><a href="#">Carte cadeau</a></li>
+                    <li><a href="#">Catalogue</a></li>
+                </ul>
+                <p>Orinoco&vous<i class="fal fa-chevron-down" aria-hidden="true"></i></p>
+                <ul>
+                    <li><a href="#">Livraisons et retours</a></li>
+                    <li><a href="#">Services et garanties</a></li>
+                    <li><a href="#">Nous contacter</a></li>
+                    <li><a href="#">CGV</a></li>
+                </ul>
+                <img class="logo_bottom" src="#" alt="">
+                <section class="social"></div>
+                        <a href="#">
+                            <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                            <p>Facebook</p>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-twitter" aria-hidden="true"></i>
+                            <p>Twitter</p>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-instagram" aria-hidden="true"></i>
+                            <p>Instagram</p>
+                        </a>
+                    </section>
+            </footer>
     </body>
 
 </html>
