--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <div>
-                <img src="img/logo_modified.png" class="logo"/>
+                <a href="index.html"><img src="img/logo_modified.png" class="logo"/></a>
                 <nav>
                     <i class="far fa-bars" onclick="openMenu()"></i>
                     <ul id="menu_nav">
@@ -24,7 +24,7 @@
             <h1>Bienvenue sur Orinoco</h1>
             <p>Voici notre sélection pour</p>
             <h2></h2>
-            <div id="separation"></div>
+            <div class="separation"></div>
             <section>
                 <!--DYNAMIQUE-->
             </section>
@@ -37,22 +37,22 @@
                     <i class="fas fa-heart" aria-hidden="true"></i>
                     <p>Favoris</p>
                 </a>
-                <a>
+                <a href="html/panier.html">
                     <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                     <p>Mon panier</p>
                 </a>
             </section>
         </main>
         <footer>
-            <p>À propos<i class="fal fa-chevron-down" aria-hidden="true"></i></p>
-            <ul>
+            <p onclick="showFooterAPropos()">À propos<i class="fal fa-chevron-down" aria-hidden="true"></i></p>
+            <ul id="a_propos">
                 <li><a href="#">Qui sommes nous?</a></li>
                 <li><a href="#">Nos engagements</a></li>
                 <li><a href="#">Carte cadeau</a></li>
                 <li><a href="#">Catalogue</a></li>
             </ul>
-            <p>Orinoco&vous<i class="fal fa-chevron-down" aria-hidden="true"></i></p>
-            <ul>
+            <p onclick="showFooterOrinoco()">Orinoco&vous<i class="fal fa-chevron-down" aria-hidden="true"></i></p>
+            <ul id="orinoco_info">
                 <li><a href="#">Livraisons et retours</a></li>
                 <li><a href="#">Services et garanties</a></li>
                 <li><a href="#">Nous contacter</a></li>
@@ -60,19 +60,19 @@
             </ul>
             <img class="logo_bottom" src="#" alt="">
             <section class="social"></div>
-                    <a href="#">
-                        <i class="fab fa-facebook-f" aria-hidden="true"></i>
-                        <p>Facebook</p>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-twitter" aria-hidden="true"></i>
-                        <p>Twitter</p>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-instagram" aria-hidden="true"></i>
-                        <p>Instagram</p>
-                    </a>
-                </section>
+                <a href="https://www.facebook.com/" target="_blank">
+                    <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                    <p>Facebook</p>
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <i class="fab fa-twitter" aria-hidden="true"></i>
+                    <p>Twitter</p>
+                </a>
+                <a href="https://www.instagram.com/" target="_blank">
+                    <i class="fab fa-instagram" aria-hidden="true"></i>
+                    <p>Instagram</p>
+                </a>
+            </section>
         </footer>
     </body>
 
