added order function

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         
         <main>
             <h1>Bienvenue sur Orinoco</h1>
-            <section id="title">
-            </section>
+            <h2>Caméras vintage</h2>
             <div class="separation"></div>
             <section id="liste">
             </section>
