--- a/page_produit.html
+++ b/page_produit.html
@@ -27,14 +27,8 @@
             <section class="conteneur">
                 <section id="product_info">
                 </section>
-                <form class="product_perso">
-                    <label for="lentille">Choisissez votre lentille : </label>
-                    <select name="lentille" id="lentille">
-                        <option value="55mm">55mm</option>
-                        <option value="65mm">65mm</option>
-                        <option value="75mm">75mm</option>
-                    </select>
-                </form>
+                <div id="product_perso">
+                </div>
                 <button onclick="addToCart()"><i class="far fa-plus"></i>Ajouter au panier</button>
                 <div id="popup_add" class="hide">
                         <div>
