--- a/panier.html
+++ b/panier.html
@@ -43,7 +43,7 @@
                     <h4>Merci de remplir le formulaire pour passer commande (tous les champs sont obligatoires)</h4>
                     <i class="far fa-times" onclick="showCloseForm()"></i>
 
-                    <form method="post" action="#">
+                    <form>
                         <label for="pays"></label>
                         <select name="pays" id="pays" autofocus>
                             <option value="france">France</option>
@@ -55,10 +55,9 @@
                         <label for="lastname"></label><input type="text" name="lastname" id="lastname" placeholder="Votre nom" required/>
                         <label for="firstname"></label><input type="text" name="firstname" id="firstname" placeholder="Votre prénom" required/>
                         <label for="email"></label><input type="email" name="email" id="email" placeholder="Votre e-mail" required/>
-                        <label for="adresse1"></label><input type="text" name="adresse1" id="adresse1" placeholder="Adresse ligne 1" required/>
-                        <label for="adresse2"></label><input type="text" name="adresse2" id="adresse2" placeholder="Adresse ligne 2"/>
-                        <label for="codepostal"></label><input type="text" name="codepostal" id="codepostal" placeholder="Code postal" required/>
-                        <label for="ville"></label><input type="text" name="ville" id="ville" placeholder="Ville" required/>
+                        <label for="adress"></label><input type="text" name="adress" id="adress" placeholder="Adresse ligne 1" required/>
+                        <label for="postcode"></label><input type="text" name="postcode" id="postcode" placeholder="Code postal" required/>
+                        <label for="city"></label><input type="text" name="city" id="city" placeholder="Ville" required/>
                         <input type="submit" value="Valider" onclick="sendData()"/>
                     </form>
                 </div>
