--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </ul>
             </section>
             <img class="logo_bottom" src="#" alt="">
-            <section class="social"></div>
+            <section class="social">
                 <a href="https://www.facebook.com/" target="_blank">
                     <i class="fab fa-facebook-f" aria-hidden="true"></i>
                     <p>Facebook</p>
