envoi commande + confirmation

--- a/confirmation.html
+++ b/confirmation.html
@@ -24,7 +24,7 @@
         <main>
             <div id="confirmation">
                 <i class="far fa-smile"></i>
-                <p>Merci! Votre commande <span id="id_order">TJ03859e</span> d'un montant de <span id="total_amount">78 594€</span>
+                <p>Merci! Votre commande <span id="id_order"></span> d'un montant de <span id="total_amount"></span>
                 a bien été enregistrée.</p>
                 <p>Vous recevrez sous peu un email de confirmation</p>
             </div>
