--- a/panier.html
+++ b/panier.html
@@ -58,7 +58,7 @@
                         <label for="adress"></label><input class="form-input" type="text" name="adress" id="adress" placeholder="Adresse ligne 1" required/>
                         <label for="postcode"></label><input class="form-input" type="text" name="postcode" id="postcode" placeholder="Code postal" required/>
                         <label for="city"></label><input class="form-input" type="text" name="city" id="city" placeholder="Ville" required/>
-                        <input type="submit" value="Valider" id="confirmOrder" onclick="sendData()"/>
+                        <input type="submit" value="Valider" id="confirmOrder"/>
                     </form>
                 </div>
             </section>
@@ -98,6 +98,7 @@
             </section>
         </footer>
         <script type="text/javascript" src="js/panier.js"></script>
+        <script type="text/javascript" src="js/utils.js"></script>
         <script type="text/javascript" src="js/appearance_controls.js"></script>
     </body>
 </html>
