--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 </a>
             </section>
         </footer>
+        <script type="text/javascript" src="js/utils.js"></script>
         <script type="text/javascript" src="js/liste_vue.js"></script>
         <script type="text/javascript" src="js/appearance_controls.js"></script>
     </body>
